@@ -30,6 +30,7 @@ Changes in Bitbake 1.9.x:
 	- Improve the progress indicator by skipping tasks that have 
 	  already run before starting the build rather than during it
 	- Add profiling option (-P)
+	- Add BB_SRCREV_POLICY variable (clear or cache) to control SRCREV cache
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
